# anceps

./: .gcloudignore  .gitignore  .vibe_darkness  Makefile  README.md  cloudbuild.yaml  deploy.sh  docker-compose.yml  idea.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/agent_agent/: agent_agent.py  ultimate_agent.py
agents/binary-gate-forget/: SKILL.md
agents/binary-gate-forget/scripts/: gate_engine.cjs
claude_stuffs/: architecture.md  dockerfile_howto.md  evals.md  ji-glossary.md  social-contract.md  the_receipts.md
examples/: lisp_file.lisp  test.lisp
inference/: Dockerfile  README.md  app_factory.py  auth.py  cli.py  config.py  requirements.txt  schemas.py  server.py
inference/models/: base.py  dummy.py  registry.py  sdxl.py  stylegan.py  svd.py
inference/runtime/: context.py  model_runner.py
inference/tests/: test_server.py
octave/: Dockerfile  bridge_to_inference.m  osc_receive.m  start_bridge.m  startup.m
octave/ji_math/: affect.m  blend.m  heterodyne.m  lattice.m  prime_factorize.m
renderer/: index.html
samhita/: sandhi.md
sc/: README.md  analysis.scd  flux.scd  main.scd  osc_send.scd  partial_tracker.scd
